<resources>
    <string name="app_name">TeamScore™</string>
    <string name="HomeTeam">Miami Heat</string>
    <string name="AwayTeam">Golden State Warriors</string>
    <string name="HomeTeamScore">0</string>
    <string name="AwayTeamScore">0</string>
    <string name="WinnerAlert">And the winner is:</string>
    <string name="action_share">Share</string>
    <string name="action_settings">Settings</string>
    <string name="sms_share">Share via SMS</string>
    <string name="phone_share">Share via Phone</string>
    <string name="map_share">Look up games.</string>

    <string name="map_icon">map icon</string>
    <string name="phone_icon">phone icon</string>
    <string name="more_icon">share icon</string>
    <string name="sms_icon">sms icon</string>

    <string name="image_description">Image of NBA\'s Larry O\'Brien Trophy</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_night_mode">Enable night mode</string>
    <string name="pref_description_night_mode">Dark mode based on the device\'s time. </string>

    <string name="pref_value_default_contact">18005555412</string>

    <string name="pref_title_away_name">Away Team</string>
    <string name="pref_value_away_name">Golden State Warriors</string>

    <string name="pref_title_home_name">Home Team</string>
    <string name="pref_value_home_name">Miami Heat</string>

    <string name="pref_title_sports_name">Sport</string>
    <string-array name="pref_sport_list_titles">
        <item>Baseball</item>
        <item>Basketball</item>
        <item>Hockey</item>
    </string-array>
    <string-array name="pref_sport_list_values">
        <item>Baseball</item>
        <item>Basketball</item>
        <item>Hockey</item>
    </string-array>

    <string name="pref_background_list">Winning Background</string>
    <string-array name="pref_background_list_titles">
        <item>Cup</item>
        <item>Medal</item>
        <item>Thumbs Up</item>
    </string-array>
    <string-array name="pref_background_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <string name="pref_title_about_page">Initial</string>
    <string name="pref_header_about">About</string>
    <string name="pref_title_default_contact">Default sharing number</string>


</resources>
