<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory android:title="Test Section">
        <SwitchPreference
            android:defaultValue="false"
            android:key="nigh_mode"
            android:summary="@string/pref_description_night_mode"
            android:title="@string/pref_title_night_mode" />
    </PreferenceCategory>

    <PreferenceCategory android:title="Sport settings">
        <!-- NOTE: EditTextPreference accepts EditText attributes. -->
        <!-- NOTE: EditTextPreference's summary should be set to its value by the activity code. -->

        <!-- NOTE: Hide buttons to simplify the UI. Users can touch outside the dialog to
             dismiss it. -->
        <ListPreference
            android:defaultValue="-1"
            android:entries="@array/pref_sport_list_titles"
            android:entryValues="@array/pref_sport_list_values"
            android:key="sports_list"
            android:negativeButtonText="@null"
            android:positiveButtonText="@null"
            android:title="@string/pref_title_sports_name" />

        <EditTextPreference
            android:capitalize="words"
            android:defaultValue="@string/pref_value_home_name"
            android:inputType="textCapWords"
            android:key="home_text"
            android:maxLines="1"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            android:title="@string/pref_title_home_name" />

        <EditTextPreference
            android:capitalize="words"
            android:defaultValue="@string/pref_value_away_name"
            android:inputType="textCapWords"
            android:key="away_text"
            android:maxLines="1"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            android:title="@string/pref_title_away_name" />


    </PreferenceCategory>
</PreferenceScreen>
