<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".activity.MainActivity">

    <item
        android:id="@+id/action_settings"
        android:icon="@drawable/ic_baseline_share_24px"
        android:title="@string/action_settings"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/phone_menu"
        android:title="@string/phone_share"
        app:showAsAction="never" />
    <item
        android:id="@+id/sms_menu"
        android:title="@string/sms_share"
        app:showAsAction="never" />
    <item
        android:id="@+id/map_menu"
        android:title="@string/map_share"
        app:showAsAction="never" />
</menu>