<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:layout_gravity="center_horizontal"
    android:background="@drawable/heat_backcourt"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/buttonView_HomeTeam"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_column="0"
        android:layout_columnSpan="1"
        android:layout_marginEnd="5dp"
        android:layout_row="0"
        android:background="@color/colorHome"
        android:text="@string/HomeTeam" />

    <Button
        android:id="@+id/buttonView_AwayTeam"
        android:layout_width="205dp"
        android:layout_height="wrap_content"
        android:layout_column="1"
        android:layout_columnSpan="1"
        android:layout_marginStart="5dp"
        android:layout_row="0"
        android:background="@color/colorAway"
        android:text="@string/AwayTeam" />

    <TextView
        android:id="@+id/textView_HomeTeamScore"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="0"
        android:layout_columnSpan="1"
        android:layout_gravity="center_horizontal"
        android:layout_row="1"
        android:text="@string/HomeTeamScore"
        android:textSize="100sp"

        />

    <TextView
        android:id="@+id/textView_AwayTeamScore"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="1"
        android:layout_columnSpan="1"
        android:layout_gravity="center_horizontal"
        android:layout_row="1"
        android:text="@string/AwayTeamScore"
        android:textSize="@dimen/font_size" />
</GridLayout>